# chemistry-coursework

./: README.md  center_of_mass.py  energy_calc.py  main.py  pyproject.toml
molecules/: graphite.xyz  thede.xyz
